# libspectacles

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md
doxygen/: header.html
include/: broker.h  gateway.h  spectacles.h  utils.h
include/etf/: constants.h  data.h  decoder.h  encode_func.h  encoder.h  etf.h
master/: classes.html  classspectacles_1_1brokers_1_1Consumer.html  classspectacles_1_1brokers_1_1Publisher-members.html  classspectacles_1_1gateway_1_1Connection-members.html  classspectacles_1_1gateway_1_1Packet.html  dir_d44c64559bbebec7f509842c48db8b23.html  gateway_8h_source.html  namespacemembers.html  namespacespectacles.html  namespacespectacles_1_1brokers.html  namespacespectacles_1_1gateway.html  spectacles_8h_source.html  structspectacles_1_1brokers_1_1Error.html  structspectacles_1_1gateway_1_1Options-members.html  utils_8h_source.html
master/docs/: annotated.html  broker_8h_source.html  classspectacles_1_1brokers_1_1Consumer-members.html  classspectacles_1_1brokers_1_1Publisher.html  classspectacles_1_1gateway_1_1Connection.html  classspectacles_1_1gateway_1_1Packet-members.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  namespacemembers_enum.html  namespaces.html  structspectacles_1_1brokers_1_1Error-members.html  structspectacles_1_1gateway_1_1Options.html
master/docs/search/: all_0.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  search.js  variables_0.js  variables_2.js  variables_3.js  variables_5.js
master/search/: all_1.js  all_2.js  all_6.js  all_9.js  enums_0.js  functions_0.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  variables_4.js  variables_6.js
src/: broker.cc  gateway.cc  utils.c
tools/: CMakeLists.txt  docker.cc
travis/: deploy-key.enc  deploy.sh  test.sh
